--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                    style="background: linear-gradient(90deg, #007BFF, #00C6FF); color:#fff; border-radius:4px;">Home</a>
                 <!-- Services Dropdown -->
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle text-dark" data-toggle="dropdown">About Us</a>
+                    <a href="about.html" class="nav-link dropdown-toggle text-dark" data-toggle="dropdown">About Us</a>
                     <div class="dropdown-menu border-0 shadow">
                         <a href="mission.html" class="dropdown-item">Mission & vision</a>
                         <a href="profile.html" class="dropdown-item">Company Profile</a>
@@ -215,7 +215,7 @@
         <div class="about-image-wrapper">
           <img class="img-fluid w-100" src="img/about.jpg" alt="About Rind Baloch Logistics">
           <div class="experience-box">
-            <h3 class="m-0">Years of Experience in Logistics Solutions</h3>
+            <h3 class="m-0">LEADING NVOCC</h3>
           </div>
         </div>
       </div>
